# Discord-Music-Player

./: .gitignore  LICENSE  README.md  clear_commands.py  dc.py  pyproject.toml  requirements.txt  run_windows.bat  setup.sh  setup_windows.bat
bot/: __init__.py  app.py  audio_source.py  cogs_control.py  cogs_help.py  cogs_music.py  config.py  jiosaavn.py  local_files.py  opus_bootstrap.py  radio_stations.json  search.py  soundcloud.py  spotify.py  state.py  tv.py  youtube.py
