[project]
name = "dc"
version = "0.1.0"
description = "Hosted Discord music bot"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "discord.py[voice]>=2.7.1",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "websockets>=12.0",
    "pycryptodome>=3.23.0",
    "pynacl>=1.5.0",
    "davey>=0.0.3",
    "discord-ext-voice-recv>=0.5.2a179",
    "yt-dlp>=2026.6.9",
    "paramiko>=5.0.0",
]
